# caliprint

./: .gitignore  CMakeLists.txt  README.md
assets/: caliprint.conf  caliprint.desktop  caliprint.glade
src/: callbacks.c  error.c  gcode.c  gui.c  log.c  main.c  preferences.c  serial.c  signals.c  utils.c
src/include/: gcode.h  gui.h  log.h  preferences.h  serial.h  utils.h
